fix case, fix spacing, stop 404s

--- a/app/assets/stylesheets/views/completed-transaction.scss
+++ b/app/assets/stylesheets/views/completed-transaction.scss
@@ -6,7 +6,7 @@
       width: 95%;
 
       input {
-        margin-right: 0.25em;
+        margin-right: 0.5em;
         vertical-align: 2px;
         background: #f8f8f8;
         }
